# llm-game-gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
llmgg/: __main__.py  decoder.py  game.py  llm.py  loader.py  main.py
llmgg/game_data/: formula.json  iron.json  soulstone.json  spork.json
