[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-game-gen"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "ollama==0.2.0"
]

[project.scripts]
llmgg = "llmgg.main:main"

[tool.setuptools.packages.find]
namespaces = false
include = ["llmgg"]

[tool.setuptools.package-data]
llmgg = ["game_data/*.json"]
